--- a/style.css
+++ b/style.css
@@ -135,6 +135,8 @@ nav.sticky .menu-btn{
   font-weight: 600;
   margin-left: -3px;
     max-width: 100%; 
+  white-space: nowrap;
+    
 }
 @media (max-width: 500px) {
       font-size: 50px;  /* Adjust font size for smaller screens */
