--- a/style.css
+++ b/style.css
@@ -136,9 +136,9 @@ nav.sticky .menu-btn{
   margin-left: -3px;
     max-width: 100%; 
   white-space: nowrap;
-    
+     overflow: hidden;
 }
-@media (max-width: 500px) {
+@media (max-width: 700px) {
       font-size: 50px;  /* Adjust font size for smaller screens */
     }
 .home .text-three{
